--- a/pre-processamento/capitulo-5-pre-processamento-de-dados-02.ipynb
+++ b/pre-processamento/capitulo-5-pre-processamento-de-dados-02.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Curso Data Science do Zero - Minerando Dados"
+    "# Mineração de Dados"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5º Capítulo: Pre-processamento de Dados ##"
+    "## Capítulo: Pre-processamento de Dados ##"
    ]
   },
   {
@@ -650,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
